--- a/frontend/src/components/dashboard/User/Medicines/UserMedicine.css
+++ b/frontend/src/components/dashboard/User/Medicines/UserMedicine.css
@@ -1,10 +1,4 @@
-.medicine-list{
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
+
 
   .card {
     margin: 10px;
@@ -12,7 +6,7 @@
     width: 100%;
     max-width: 300px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    background: transparent;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
