--- a/frontend/src/components/dashboard/User/OrderShipping/PastOrder.css
+++ b/frontend/src/components/dashboard/User/OrderShipping/PastOrder.css
@@ -1,62 +1,24 @@
-.past-orders-container {
-    padding: 20px;
-  }
-  
-  .order-list {
-    display: grid;
-    gap: 20px;
-  }
-  
-  .order-item {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    padding: 20px;
-  }
-  
-  .order-details {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .shipping-address {
-    font-weight: bold;
-  }
-  
-  .payment-method {
-    font-weight: bold;
-  }
-  
-  .item-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .item {
-    border-top: 1px solid #ddd;
-    padding-top: 10px;
-    margin-top: 10px;
-  }
-  
-  .logo a {
-    color: white;
-    font-size: 1.5rem;
-    text-decoration: none;
-  }
-  
-  .nav-links {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-  }
-  
-  .nav-links li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .nav-links li a:hover {
-    text-decoration: underline;
-  }
-  
+
+
+.card {
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+  max-width: 300px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card h3 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.card p {
+  margin: 5px 0; /* Adjust spacing between paragraphs */
+  font-size: 1rem;
+  color: #555;
+}
