--- a/frontend/src/components/dashboard/Admin/DeliveryWorker/showseller.css
+++ b/frontend/src/components/dashboard/Admin/DeliveryWorker/showseller.css
@@ -1,49 +1,14 @@
-/* AdminList.css */
+.pad{
+  padding-left:300px;
+  padding-top:50px;
+}
 
-h1 {
-    font-size: 24px;
-    text-align: center;
-    margin: 20px;
-  }
-  .pad{
-    margin-left: 300px;
-    margin-right:10px;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    
-  }
-  
-  table, th, td {
-    border: 1px solid #ccc;
-  }
-  
-  th, td {
-    padding: 12px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  button {
-    background-color: #ff0000;
-    color: #fff;
-    border: none;
-    padding: 8px 12px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #cc0000;
-  }
-  
+.btn-style{
+  background-color: black;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+  cursor: pointer;
+}
