--- a/frontend/src/components/dashboard/User/Footer.css
+++ b/frontend/src/components/dashboard/User/Footer.css
@@ -1,3 +1,24 @@
 .height{
     padding-top: 100px;
 }
+
+
+.phone  {
+
+ background-color: black;
+text-align: center;
+padding: 10px;
+
+}
+
+.email{
+    background-color: black;
+    text-align: center;
+    padding: 10px;
+}
+.ql{
+    
+    background-color: black;
+    text-align: center;
+    padding: 10px;
+}
