--- a/frontend/src/components/dashboard/User/OrderShipping/UserFeedback.css
+++ b/frontend/src/components/dashboard/User/OrderShipping/UserFeedback.css
@@ -1,37 +1,8 @@
-.feedback-form-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  input,
-  textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
-  
+.scroll-fb{
+  overflow-y: scroll; /* Enable vertical scrolling */
+  height: 100vh; /* Set the height to occupy the full viewport height */
+}
+
+.ufb{
+  padding-top:20px;
+}
