--- a/frontend/src/components/dashboard/User/Dashboard.css
+++ b/frontend/src/components/dashboard/User/Dashboard.css
@@ -1,13 +1,13 @@
-.my{
+.my-dashboard{
 
-    background-image: url('./images/hero_1.jpg'); /* Add background image */
+    background-image: url('./images/f.jpg'); /* Add background image */
     background-size: cover; /* Add background size */
     background-position: center; /* Add background position */
     padding: 7em 0; /* Add padding */
     color: #fff; /* Add color */
     text-align: center; /* Add text align */
     position: relative; /* Add position */
-    height: 100vh; /* Add height */
+    height: 70vh; /* Add height */
 
 }
 
@@ -18,3 +18,5 @@
   overflow-y: scroll; /* Enable vertical scrolling */
   height: 100vh; /* Set the height to occupy the full viewport height */
 }
+
+
