--- a/frontend/src/components/dashboard/Admin/Stock/stock.css
+++ b/frontend/src/components/dashboard/Admin/Stock/stock.css
@@ -4,8 +4,8 @@
 }
 
 .scroll-admin {
-  overflow-y: scroll; /* Enable vertical scrolling */
-  height: 100vh; /* Set the height to occupy the full viewport height */
+  overflow-y: scroll; 
+  height: 100vh;
 }
 
 .container-stock{
