--- a/frontend/src/components/dashboard/User/OrderShipping/PastOrder.css
+++ b/frontend/src/components/dashboard/User/OrderShipping/PastOrder.css
@@ -18,7 +18,7 @@
 }
 
 .card p {
-  margin: 5px 0; /* Adjust spacing between paragraphs */
+  margin: 5px 0; 
   font-size: 1rem;
   color: #555;
 }
