--- a/frontend/src/components/dashboard/User/OrderShipping/UserFeedback.css
+++ b/frontend/src/components/dashboard/User/OrderShipping/UserFeedback.css
@@ -1,8 +1,12 @@
 .scroll-fb{
-  overflow-y: scroll; /* Enable vertical scrolling */
-  height: 100vh; /* Set the height to occupy the full viewport height */
+  overflow-y: scroll; 
+  height: 100vh; 
 }
 
 .ufb{
   padding-top:20px;
+  
+}
+.fb-color{
+  background-color: #05078A;
 }
