--- a/frontend/src/components/dashboard/Admin/Seller/SellerDetails.css
+++ b/frontend/src/components/dashboard/Admin/Seller/SellerDetails.css
@@ -1,4 +1,55 @@
-.seller-info{
-padding-left: 300px;
-  
+
+
+.overflow-scroll-seller{
+    overflow-y: scroll; 
+    height: 100vh; 
+  }
+
+.my-bg{
+    background-color: #1e81b0;
+    
+    border: 2px solid #007bff;
+    padding: 10px; 
+    border-radius: 5px;
+   
+    
+    
 }
+.sellerh{
+    
+    text-align: center;
+    
+}
+  .seller-products-form{
+
+        padding-left: 200px;
+
+  } 
+
+  .d-sel{
+    padding-top: 40px;
+    border-radius: 10px;
+    background-color: #05078A;
+    color: white;
+    text-align: center;
+    height: 550px;
+
+  }
+
+  .seller-info{
+    
+  }
+
+  .Name{
+    
+    
+  }
+  .custom-seller {
+    color: #007bff; 
+    border: 2px solid #007bff;
+    padding: 10px; 
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-left: 10px;
+     
+  }
