--- a/frontend/src/components/dashboard/User/About.css
+++ b/frontend/src/components/dashboard/User/About.css
@@ -20,7 +20,7 @@
 }
 
 .overflow-scroll {
-    overflow-y: scroll; /* Enable vertical scrolling */
-    height: 100vh; /* Set the height to occupy the full viewport height */
+    overflow-y: scroll; 
+    height: 100vh; 
   }
  
