--- a/frontend/src/components/dashboard/User/Medicines/UserMedicine.css
+++ b/frontend/src/components/dashboard/User/Medicines/UserMedicine.css
@@ -1,24 +1,39 @@
 
 
-  .card {
-    margin: 10px;
-    padding: 10px;
-    width: 100%;
-    max-width: 300px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    background: transparent;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  .overflow-scroll-USerMedicine{
+    overflow-y: scroll; 
+    height: 100vh; 
   }
+ 
+  .my-card{
+    margin-bottom: 250px;
+  }
+ 
+  .card-title{
+    color: #05078A;
+    padding-top: 10px;
+    border-radius: 10px;
+    background-color: #05078A;
+    color: white;
+    text-align: center;
 
-  .card h3 {
-    margin: 0;
-    font-size: 1.5rem;
+
+
+
   }
+.my-bm{
+  padding-bottom: 50px;
+}
   
-  .card p {
-    margin: 5px 0; /* Adjust spacing between paragraphs */
-    font-size: 1rem;
-    color: #555;
-  }
+.card-text{
+  
+  padding-top: 10px;
+  border-radius: 10px;
+  background-color: #05078A;
+  text-align: center;
+  
+}
+
+  
+  
+ 
