--- a/frontend/src/components/dashboard/Admin/DeliveryWorker/showseller.css
+++ b/frontend/src/components/dashboard/Admin/DeliveryWorker/showseller.css
@@ -1,6 +1,7 @@
 .pad{
-  padding-left:300px;
-  padding-top:50px;
+  padding-left:20px;
+  padding-top:10px;
+  padding-right:20px;
 }
 
 .btn-style{
@@ -11,4 +12,8 @@
   padding: 10px;
   margin: 10px 0;
   cursor: pointer;
+}
+.custom-scroll-worker {
+  height: 100vh;
+  overflow-y: auto;
 }
