--- a/frontend/src/components/dashboard/Admin/style.css
+++ b/frontend/src/components/dashboard/Admin/style.css
@@ -6,6 +6,13 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+.m-admin{
+
+  width: 80%;
+  margin: 0 auto;
+  
+
+}
 .back{
   background-color:blue;
 }
@@ -97,8 +104,8 @@
   position: relative;
   background: #f5f5f5;
   min-height: 100vh;
-  width: calc(100% - 240px);
-  left: 240px;
+  width: 100%;
+ 
   transition: all 0.5s ease;
 }
 .sidebar.active ~ .home-section{
@@ -204,6 +211,7 @@ nav .profile-details i{
   flex-wrap: wrap;
   padding: 0 20px;
   margin-bottom: 26px;
+  
 }
 .overview-boxes .box{
   display: flex;
