--- a/frontend/src/components/dashboard/User/Medicines/CartDisplay.css
+++ b/frontend/src/components/dashboard/User/Medicines/CartDisplay.css
@@ -4,7 +4,11 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
+  .scroll-cart {
+    overflow-y: scroll; 
+    height: 100vh; 
+  }
+
   body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
