--- a/frontend/src/components/dashboard/Admin/Feedback.css
+++ b/frontend/src/components/dashboard/Admin/Feedback.css
@@ -30,3 +30,13 @@
     margin-bottom: 0;
   }
   
+.order-admin{
+    padding: 10px;
+    margin: 10px;
+    width: 95%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    
+}
