--- a/frontend/src/components/dashboard/User/OrderShipping/Shipping.css
+++ b/frontend/src/components/dashboard/User/OrderShipping/Shipping.css
@@ -55,4 +55,10 @@
   button:hover {
     background-color: #0056b3;
   }
-  
+  .shipping-scroll{
+    overflow-y: scroll;
+    height: 700px;
+  }
+  input::placeholder {
+    color: black;
+}
